# nir-editor

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  NOTICE  README.md  TRADEMARK.md  rebrand.py  search_results.csv  test-write.txt  upstream_workspace.rs  upstream_workspace_utf8.rs
.github/workflows/: build-debug.yml  build-release.yml  build-windows.yml  build.yml
assets/badge/: v0.json
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json  initial.json
assets/settings/: default.json  initial_debug_tasks.json  initial_local_debug_tasks.json  initial_local_settings.json  initial_server_settings.json  initial_tasks.json  initial_user_settings.json
crates/agent/: Cargo.toml
crates/agent_ui/: Cargo.toml
crates/buffer_diff/: Cargo.toml
crates/collab/: README.md
crates/etw_tracing/: etw_tracing.rs
crates/eval_cli/: README.md
crates/gpui/: README.md
crates/nir_analytics/: Cargo.toml
crates/prompt_stt/: Cargo.toml
crates/prompt_stt/src/: audio_capture.rs  lib.rs  whisper.rs
crates/settings_ui/: Cargo.toml
crates/void_agent_launcher/: Cargo.toml
crates/void_agent_launcher/src/: lib.rs
crates/workspace/: Cargo.toml
crates/zed/: Cargo.toml  build.rs
docs/: AGENTS.md  README.md  book.toml
docs/src/: authentication.md  command-palette.md  development.md  getting-started.md  git.md  globs.md  (+15 more)
legal/: terms.md
nir-docs/: MEMORY_SYSTEM.md
scripts/: generate-icons.mjs  generate_icons.py
void-docs/: AGENTS.md  BRANDING_ASSETS.md  DESIGN_SYSTEM.md  LOCAL_STT_PIPELINE.md  NIR_FEATURES.md  void-progress-report.md
(+412 files in other folders)
