[package]
name = "prompt_stt"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = { workspace = true }
rubato = "0.14.1" # For audio resampling
candle-core = { git = "https://github.com/huggingface/candle.git", branch = "main" }
candle-nn = { git = "https://github.com/huggingface/candle.git", branch = "main" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", branch = "main" }
tokio = { workspace = true }
anyhow = { workspace = true }
gpui = { workspace = true }
util = { workspace = true }
reqwest = { version = "0.12", features = ["json", "stream"] }
dirs = "5.0"
log = { workspace = true }
tokenizers = "0.19.1"
serde_json = "1.0"
