[package]
name = "void_agent_launcher"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
gpui.workspace = true
task.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true